[tool.poetry]
name = "amazon-adapter"
version = "0.1.0"
description = ""
authors = ["Marcel Stolin <mstolin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
